--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         />
         <link rel="stylesheet" href="static/css/style.css">
 </head>
-<body>
+<body class="bg-dark">
     <div class="wrapper">
         <!-- -->
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <!--“navbar-brand” is a built-in style from Bootstrap that provides padding and font sizing to the element by default-->
             <a class="navbar-brand" href="index.html">UFO Sightings</a>
         </nav>
     <div class="jumbotron">
-        <h1>The Truth Is Out There</h1>
+        <h1 class="display-4">The Truth Is Out There</h1>
     </div >
     <!--“container-fluid” class  creates a container for other elements. Element(s) inside the container will resize as needed to fully fit the width of the browser.-->
     <div class="container-fluid,">
@@ -29,7 +29,8 @@
         <div class="row">
             <div class="col-md-4">
                 <!-- The <small> tag we've nested in will add a little bit of extra styling out of the box, too. Adding it will help de-emphasize the second portion of the title.-->
-                <h3>UFO Sightings: Fact or Fancy? <small>Ufologists Weigh In</small></h3>
+                <h3>UFO Sightings: Fact or Fancy? <small>
+                    <br/>Ufologists Weigh In</small></h3>
             </div>
             <div class="col-md-8">
                 <p>
@@ -44,21 +45,21 @@
     <div class="container-fluid,">
         <div class="row">
             <div class="col-md-3">
-                <form>
+                <form class="bg-dark">
                     <p>Filter Search</p>
-                </form>
-                <ul class="list-group">
-                    <li class="list-group-item">
+                <ul class="bg-dark" class="list-group">
+                    <li class="bg-dark" class="list-group-item">
                         <!-- The label will be used as a prompt to encourage users to input a date.-->
                         <label for="date">Enter Date</label>
                         <!-- placeholder is an example of a date to search, so users know both the location and the format to use when inputting a date.-->
                         <!--id="datetime" is what our JavaScript code will look for when the button is clicked and the function is executed.-->
                         <input type="text" placeholder="1/10/2010" id="datetime" />
                     </li>
-                    <li class="list-group-item">
-                        <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                    <li class="bg-dark" class="list-group-item">
+                        <button id="filter-btn" type="button" class="btn-dark">Filter Table</button>
                     </li>
                 </ul>
+                </form>
             </div>
             <div class="col-md-9">
                 <table class="table table-striped">
@@ -77,7 +78,9 @@
                 </table>
             </div>
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+    <script src="static/js/data.js"></script>
+    <script src="static/js/app.js"></script>
 </body>
 </html>
 <!-- The label will be used as a prompt to encourage users to input a date.-->
